--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,15 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/@dashedjs/dashed-core/packages/icons",
+                "output": "./assets/dashed-icons"
+              }
+            ],
             "styles": ["src/styles.scss"],
             "scripts": []
           },
@@ -79,7 +87,15 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": ["src/styles.scss"],
             "scripts": [],
-            "assets": ["src/favicon.ico", "src/assets"]
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/@dashedjs/dashed-core/packages/icons",
+                "output": "./assets/dashed-icons"
+              }
+            ]
           }
         },
         "lint": {
